tests/baselines/reference/parserArrowFunctionExpression16.errors.txt
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression16.ts(1,17): error TS2304: Cannot find name 'param'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression16.ts(1,35): error TS2304: Cannot find name 'param'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression16.ts(1,48): error TS1005: ';' expected.


==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression16.ts (3 errors) ====
    true ? false ? (param): string => param : null : null
                    ~~~~~
!!! error TS2304: Cannot find name 'param'.
                                      ~~~~~
!!! error TS2304: Cannot find name 'param'.
                                                   ~
!!! error TS1005: ';' expected.
    